--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
@@ -23,6 +24,7 @@
     "react-tabs": "^6.0.2",
     "sort-by": "^0.0.2",
     "sweeper": "^0.1.3",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.0.4"
   },
   "devDependencies": {
