--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.18.0",
     "react-simple-captcha": "^9.3.0",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.10.1",
     "sort-by": "^0.0.2",
     "sweeper": "^0.1.3",
     "sweetalert": "^2.1.2",
